--- a/js/locale/en.json
+++ b/js/locale/en.json
@@ -111,9 +111,9 @@
     },
     "dateformats": {
         "year": "yyyy",
-        "month_short": "mmm",
+        "month_short": "mmm yy",
         "month": "mmmm yyyy",
-        "full_short": "mmm d",
+        "full_short": "mmm d yy",
         "full": "mmmm d',' yyyy",
         "time": "h:MM:ss TT' <small>'mmmm d',' yyyy'</small>'",
         "time_short": "h:MM:ss TT",
