--- a/js/locale/en-24hr.json
+++ b/js/locale/en-24hr.json
@@ -56,9 +56,9 @@
     },
     "dateformats": {
         "full_long": "mmm d',' yyyy 'at' HH:MM TT",
-        "full_short": "mmm d",
+        "full_short": "mmm d yy",
         "full": "mmmm d',' yyyy",
-        "month_short": "mmm",
+        "month_short": "mmm yy",
         "time_no_seconds_small_date": "HH:MM TT'<br/><small>'mmmm d',' yyyy'</small>'",
         "month": "mmmm yyyy",
         "time_no_seconds_short": "HH:MM TT",
