--- a/js/locale/en-24hr.json
+++ b/js/locale/en-24hr.json
@@ -2,18 +2,18 @@
     "lang": "en",
     "date": {
         "month_abbr": [
-            "Jan.",
-            "Feb.",
-            "March",
-            "April",
+            "Jan",
+            "Feb",
+            "Mar",
+            "Apr",
             "May",
-            "June",
-            "July",
-            "Aug.",
-            "Sept.",
-            "Oct.",
-            "Nov.",
-            "Dec."
+            "Jun",
+            "Jul",
+            "Aug",
+            "Sep",
+            "Oct",
+            "Nov",
+            "Dec"
         ],
         "day_abbr": [
             "Sun.",
